--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #dev 
-NEXT_PUBLIC_BASE_URL="http://locahost:9090"
+
+NEXT_PUBLIC_SERVER_API_URL=http://localhost:9090
 
 #prod use nginx
 #NEXT_PUBLIC_BASE_URL=""
