add job manager

--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
+    "@hookform/resolvers": "^3.9.0",
+    "react-hook-form": "^7.52.1",
     "@nextui-org/react": "^2.4.6",
-    "@tanstack/react-table": "^8.19.3",
-    "lucide-react": "^0.414.0",
-    "class-variance-authority": "^0.7.0",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -28,7 +24,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
@@ -37,25 +33,31 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.22",
     "@react-email/render": "^0.0.17",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-table": "^8.19.3",
     "apexcharts": "^3.45.2",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dayjs": "1.11.11",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
+    "lucide-react": "^0.414.0",
     "next": "^14.2.4",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-jhipster": "0.25.3",
     "react-redux": "^9.1.0",
     "react-router": "6.23.1",
     "react-router-dom": "6.23.1",
     "reactstrap": "9.2.2",
     "redux-persist": "^6.0.0",
-    "react-icons": "^5.3.0",
-    "dayjs": "1.11.11",
-    "@reduxjs/toolkit": "^2.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -65,10 +67,10 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "tailwind-merge": "^2.4.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
