--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "dayjs": "1.11.11",
     "flatpickr": "^4.6.13",
     "framer-motion": "^11.11.10",
+    "googleapis": "^144.0.0",
     "jsvectormap": "^1.6.0",
     "lucide-react": "^0.414.0",
     "next": "^14.2.4",
     "node-fetch": "^3.3.2",
+    "pdfjs-dist": "^4.7.76",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
