--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
 #NEXT_PUBLIC_SERVER_API_URL=http://localhost:9090
 
 #prod use nginx
-NEXT_PUBLIC_BASE_URL=""
+NEXT_PUBLIC_SERVER_API_URL=http://119.28.128.201:9090
+
